sizeslider overflow fixed

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ h1{
 }
  #size-slider {
      margin-bottom: 190px;
+     width: 129px;
  }
 
 .board canvas {
